--- a/_posts/blog/2013-12-20-waiting.md
+++ b/_posts/blog/2013-12-20-waiting.md
@@ -3,7 +3,7 @@ layout:     post
 title:      网站等待时的优化
 category: blog
 description: 继404页面被设计的更出彩来挽留用户留在自己网站后，还有哪些是我们可以做的呢？
-tags: active
+tags: original
 ---
 
 
@@ -13,11 +13,15 @@ tags: active
 
 现在404页面设计丰富多彩，在出错后尽量把用户留在自己网站中，但有的用户是在失去耐心的情况下离开网站的，我们要如何延长用户的等待时间，如何才能在用户等待的时间里尽量降低这种负面情绪呢，我们先来看看大部分网站现在的做法（图1）：
 
+<div class="tac">
 <img src="../../images/blog/20131220/1.gif" />
+</div>
 
 看到这个图标，你心里在想什么？“这个网站好慢啊”，“能不能别转了，转你妹啊”。。。，恨不得像下图一样
 
+<div class="tac">
 <img src="../../images/blog/20131220/2.gif" />
+</div>
 
 根据以往的交互经验，用这个图标没有错，用户可以不经过思考就知道这是等待的意思，同样，用户也会条件反射的产生不耐烦，急躁的情绪。我们想要这种效果吗？
 
@@ -27,23 +31,23 @@ tags: active
 
 1.加强网站的品牌整体性，主要是网站logo演化成的loading图，在移动端很多产品都有应用，比如flixel（图2），在web端，淘宝（图3）做的也很不错，增强了用户对淘公仔的印象。
 
-<div><img src="../../images/blog/20131220/3.png" /></div>
+<div class="tac"><img src="../../images/blog/20131220/3.png" /></div>
 <div style="text-align: center; margin-bottom: 20px;">(图2)</div>
 
-<div><img src="../../images/blog/20131220/4.png" /></div>
+<div class="tac"><img src="../../images/blog/20131220/4.png" /></div>
 <div style="text-align: center; margin-bottom: 20px;">(图3)</div>
 
 2.增加网站的娱乐性，让用户在等待中会心一笑，比如图4。
-<div><img src="../../images/blog/20131220/5.gif" /></div>
+<div class="tac"><img src="../../images/blog/20131220/5.gif" /></div>
 <div style="text-align: center;">和我一起边等边做操吧</div>
 <div style="text-align: center; margin-bottom: 20px;">(图4)</div>
 
 3.进度条，用户对等待时间有预期，也会减少烦躁感。<br />
    在游戏界面经常能见到进度条的loading图（图5），用户通过进度可以大概预测出还要有多长的等待时间。
-   <div><img src="../../images/blog/20131220/6.jpeg" /></div>
+   <div class="tac"><img src="../../images/blog/20131220/6.jpeg" /></div>
    <div style="text-align: center; margin-bottom: 20px;">(图5)</div>
    苹果app下载也采取进度条形式（图6），对于完成下载有积极作用。
-   <div><img src="../../images/blog/20131220/7.jpeg" /></div>
+   <div class="tac"><img src="../../images/blog/20131220/7.jpeg" /></div>
    <div style="text-align: center; margin-bottom: 20px;">(图6)</div>
 
 
