scss第一章翻译的一部分

--- a/_posts/translate/2014-02-19-c1.md
+++ b/_posts/translate/2014-02-19-c1.md
@@ -1,9 +1,89 @@
 ---
 layout: post
-title: 《Sass for Web Designers》 第一章
+title: 《Sass for Web Designers》 第一章 为什么要使用sass
 category: translate
-description: description
+description: 这章会告诉你使用sass的好处，大体介绍sass是什么东西
 tags: translate
 ---
 
 
+<div class="tips">
+此翻译仅为个人理解，如有翻译错误的地方还请指正。
+</div>
+
+我不信任sass。我从来都是手写样式表的！我不需要额外的工具来帮助我简化工作。我不想要把复杂的事物添加到我的工作流程中，不要来烦我。
+
+无论是以上哪种想法，现实是sass（和其他的css预处理器）可以成为一个强有力的助手，一个任何样式书写者都可以轻松把它插入到每日的工作中去的工具。在使用了sass一段时间后回过头来看，我很庆幸自己这么做了。
+
+我想要分享我是怎么来使用sass来提高效率的，比我前10年维护css的过程要轻松许多，这就是我想要写这本书的理由。最初，由于我对sass有一些误解导致了我放弃了它。我担心我要完全改变我书写和管理css的方法。有时，css也是很脆弱的，作者想要保护他们的作品不被轻易复制是可以理解。我能得到保佑吗？阿门。
+
+现在，我将向你展示sass在不破坏你的工作进程和工作流程中，让你的工作，生活变得简单轻松的。我将向你展示sass的各个方面，如何安装，如何使用，如何在现有的项目中帮助提高效率。运气好的话，我可能也让你相信sass会在你的项目中帮到你。
+
+
+###sass脚手架（the sass elevator pitch）
+
+以前在样式表中修改一个颜色，传统的做法是找到并替换这个色值，然后再查找下一个需要替换的地方，如此反复多次才能完成。你希望css让你这样做吗？
+
+	$brand-color: #fc3;
+	a{ color: $brand-color;}
+	nav{ background: $brand-color;}
+
+假使你通过修改一处，就可以改变样式表中所有需要修改的相同地方吗？使用sass吧。
+
+或者你在同一个样式表中的好几个class都公用了一些样式。
+
+	p{ margin-bottom: 20px; font-size:14px; line-height: 1.5}
+	footer{ margin-bottom: 20px; font-size:14px; line-height: 1.5}
+
+你不想要复用这些重复的样式代码块吗？同样，使用sass可以只定义一次，然后当你需要使用他们的时候就使用@include指令添加到当前的class中即可。
+
+
+	mixin default-type{margin-bottom: 20px; font-size:14px; line-height: 1.5}
+	p{ @include  default-type;}
+	footer{ @include default-type;}
+
+
+这就是sass。上面这两个及其简单的例子只能很粗浅的展示sass如何使得你书写样式变得更快捷，更简单，更灵活。在web设计领域非常欢迎这种辅助工具，因为任何一个做网站的都懂的。。。
+
+
+###css is hard
+
+其实要学习css并不容易。你需要知道每一个属性，他们是如何通过优先级来实现样式的覆盖（或+重写样式），浏览器的兼容性，选择器等，这并不容易。添加一个复杂的接口已经花费了我们很多的时间，并且维护和等待会花费更多的时间，为什么我们还要这样做呢？有些人只享受最后的结果，这是一个矛盾。
+
+css的问题是最初的设计并不是今天我们这样使用的。当然，css的不断进步是随着浏览器的飞速发展创新和css3及以后技术的实行而实现的。但是我们要实现跨还是要依赖hacks技术。例如：float这个属性是被设计成一张图片在文本块中简单的定位的。但是现在所有的标签都可以使用这个属性了。
+
+我们的样式表非常的冗余。颜色，字体，经常使用的样式块等。典型的css文件是一个非常线性的文档，这就使得面向对象程序员非常抓狂。（尽管我只有很少的头发，但我不是一个面向对象的开发者。正如你读到的。）
+
+因为更多的标签和web应用变得更粗暴和复杂，我们屈服于css的原始设计去做事情而从来不梦想它的改变。我们希望它能更灵活。幸运的是，不远的将来浏览器的开发者们接受了更有效率更强大的属性和选择器这些新的css特性，解决了造成今天这些问题的问题。css3中的布局类的属性，如border-radius,box-shadow,高级选择器，transitions,transforms,动画等等。现在正是时候。但还是有许多css遗漏的。这就需要样式作者去花时间填补这个漏洞要容易许多。
+
+
+####the DRY principle（不要重复你自己）
+
+如果我们关注软件工程这个领域（我不仅仅关注而且还很享受在里面闲逛）,我们可以很快明白建立复杂系统的人们对于如何组织，变量，恒量，局部变量等等这些重要方法是根深蒂固的。
+
+你可能听过不要重复你自己这种说法。在Andy Hunt和Dave Thomas他俩写的《实用程序员》书中给出了DRY的解释：
+
+“每个知识的价值必须在一个体系中是独立的，清晰的，具有代表性的”
+
+这个观点的意思是复制代码会导致开发者开发失败和混淆。共同的想法是，写一次公用的，可重复实用的模块，然后再其他地方调用。这是更有效也更轻松的维护代码的方法。
+
+css可以做任何事，除了不能复用。有时css充满了重复的规则，声明，和属性值。我们不断的在我们的样式表中书写相同的代码片段只是为了颜色，字体和重复的样式模块。一个善用复用代码的开发者看到一个正统大小的css文件，首先感到困惑进而挫败的想哭。
+
+“你怎么维护!@#$这些？！”他们会这样问。
+
+“我告诉你一个IE的bug？”你可以用这种自我恶心的方式回答。
+
+####所以为什么用css干活会这么难？
+
+我们可以从css的联合发明者Bert Bos多年前的随笔中收集一些线索来理解css的语法限制：
+
+>“程序员使用css这种简短，得力的特性在他们的程序语言中：宏，变量，符号常量，条件语句，变量表达式等等，那是因为它们给骨灰级用户许多便利，但是初级用户会纠结死，或者更有可能这些初级用户会被吓到不敢再接触css。这是一个平衡。并且和其他语言相比，css更难平衡。”
+
+css的缔造者很关心使用情况，他们希望尽可能多的人来建造站点。他们想要css变得更得力，将网站的样式和内容从展示上分割开来，让人们易于理解和使用。我当然也很同意这样做。同时，我们也有工作要做，维护工作变得更复杂，更精细，更富有挑战，并且是不会过时的技术。
+
+幸运的是，有很多选项帮助我们摆脱困境，其中就有sass。
+
+### 什么是Sass（what is Sass）
+Sass是css预处理器-在你书写的样式和.css文件中间的一个层，Sass（Syntactically Awesome Stylesheets的缩写）作为css的一个扩展，可以允许你调用重复的代码，来更快，更有效率，更轻松的维护你的css。（见图1）
+
+<img src="../images/blog/sass/scss2css.png">
