Sass for Web Designers第三章部分翻译

--- a/_posts/translate/2014-03-07-c3.md
+++ b/_posts/translate/2014-03-07-c3.md
@@ -1,9 +1,216 @@
 ---
 layout: post
-title: 《Sass for Web Designers》 第二章 Sass的用法
+title: 《Sass for Web Designers》 第三章 Sass的用法
 category: translate
 description: 等全章翻译完再补充
 tags: translate
 ---
+
+<div class="source">
+	摘录来自: Dan Cederholm. “Sass for Web Designers”。
+</div>
+
+<div class="tips">
+此翻译仅为个人理解，如有翻译错误的地方还请指正。
+</div>
+
+
+在这一章中，我将分享在我项目中每天使用到的一些Sass的特性。我还特别为这本书建立了一个虚拟项目来保证我们谈论的Sass的功能是在一个真实环境中进行的。这个项目就叫做Sasquatch Records--一个很简单的专注于神话，晦涩难懂的，牲畜类等超自然音乐风格的唱片公司网站。
+
+![Alt SasquathRecords](../images/blog/sass/3-1.png)
+
+<div class="tips">
+Sasquath Records是一个我用来展示Sass例子的虚拟网站。
+</div>
+
+对于理清创建的一个复杂的样式表来说，Sass的能力是具有压倒性优势的。因为有许多可能性需要我们处理，我想要指出这个恰恰是Sass对于网站设计者来说最有价值的部分，而且还非常容易的就可以加入到你的工作流程中。
+
+###嵌套规则
+
+使用Sass，你可以把重复的选择器隔离出去，将新的CSS规则嵌套到重复的选择器中。CSS嵌套的结构可以反映标签的结构。
+
+例如，下面是Sasquath Records头部标签结构的主要部分：
+
+	<header role="banner">
+		<div id="logo">
+		<img src="logo.png" alt="Sasquatch Records" />
+		</div>
+		<h1>Sasquatch Records</h1>
+		...
+	</header>
+
+当写Scss的时候，我可以对照着元素的嵌套关系，让Sass建立一个完整的选择器链。我个人喜欢在嵌套的选择器前放一个空行，让嵌套的CSS和父层的CSS属性保持同样的缩进：
+
+	header[role="banner"] {
+		margin: 20px 0 30px 0;
+		border-bottom: 4px solid #333;
+
+		#logo {
+			float: left;
+			margin: 0 20px 0 0;
+
+			img {
+	  			display: block;
+	  			opacity: .95;
+			}
+  		}
+
+		h1 {
+			padding: 15px 0;
+			font-size: 54px;
+			line-height: 1;
+			font-family: Jubilat, Georgia, serif;
+			font-weight: bold;
+		}
+	}
+
+上面的代码会被编译成：
+
+	header[role="banner"] {
+		margin: 20px 0 30px 0;
+		border-bottom: 4px solid #333;
+	}
+
+	header[role="banner"] #logo {
+		float: left;
+		margin: 0 20px 0 0;	
+	}
+
+	header[role="banner"] #logo img {
+		display: block;
+		opacity: .95;
+	}
+
+	header[role="banner"] h1 {
+		padding: 15px 0;
+		font-size: 54px;
+		line-height: 1;
+		font-family: Jubilat, Georgia, serif;
+		font-weight: bold;
+	}
+
+Sass通过嵌套的层级关系来简化选择器中重复出现的每个元素。当然，在使用嵌套的时候也要非常小心。有时你不需要这么冗长的选择器链，并且过多的嵌套会造成可读性的障碍。层级深度只要几个就好，就像上面的例子一样，只为指定模块书写样式声明就可以了，Sass的嵌套会大大的节约你的时间。
+
+###嵌套命名空间的性能
+
+除了嵌套规则之外，在Sass中你还可以将样式属性中共同的命名空间部分提取出来共享（例如：font-family,font-size,font-weight等等)。就像下面这样：
+
+	header[role="banner"] h1{
+		padding:15px 0;
+		font:{
+			size: 54px;
+			family: jubilat,georgia,serif;
+			weight: bold;
+		}
+		line-height: 1;
+	}
+
+编译之后：
+
+	header[role="banner"] h1{
+		padding:15px 0;
+		font-size: 54px;
+		font-family: jubilat,georgia,serif;
+		font-weight: bold;
+		line-height: 1;
+	}
+
+同样，在text这个命名空间中有很多属性。我们可以使用Sass的嵌套来节省一些重复的输入：
+
+	text:{
+		transform: uppercase;
+		decoration: underline;
+		align: center;
+	}
+
+background前缀也是一个很好的例子：
+
+	background:{
+		color: #ea4c89;
+		size: 16px 16px;
+		image: url(sasquatch.png);
+		repeat: no-repeat;
+		position: top left;
+	}
+
+在Sass中，嵌套就意味着减少输入，样式块对应当前选择器（或属性的公共部分）采用缩进格式。这个概念对每一个写CSS的人来说都是很容易理解的，跨度并不大。
+
+###使用&符号来代替父层的选择器
+
+和嵌套规则和属性一脉相承的是，Sass还添加了一个使用&这个特殊占位符替代当前父层选择器的的功能。
+
+例如，在一个链接的声明里面，我们可以添加鼠标移动上去（hover）的样式覆盖原来这个链接的颜色和边框的颜色。
+
+	a{
+		font-weight: bold;
+		text-decoration: none;
+		color: red;
+		border-bottom: 2px solid red;
+		&:hover{
+			color: maroon;
+			border-color: maroon;
+		}
+	}
+
+在这个a标签的例子中，&符号插入到了父选择器中，编译之后就如下所示：
+
+	a{
+		font-weight: bold;
+		text-decoration: none;
+		color: red;
+		border-bottom: 2px solid red;
+	}
+	a:hover{
+		color: maroon;
+		border-color: maroon;
+	}
+
+还有另外一个用&标签替代父选择器加上不同的class名触发不同的样式展示的例子：
+
+	li a{
+		color: blue;
+		&.alert{
+			color: red;
+		}
+		&.success{
+			color: green;
+		}
+	}
+
+编译之后：
+
+	li a{
+		color: blue;
+	}
+	li a.alert{
+		color: red;
+	}
+	li a.success{
+		color: green;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
