修改第三章中的小bug

--- a/_posts/translate/2014-03-07-c3.md
+++ b/_posts/translate/2014-03-07-c3.md
@@ -214,7 +214,7 @@ background前缀也是一个很好的例子：
 		line-height: 1.4;
 	}
 
-在store页面（或者其他带有<body class="store">的页面），段落的文字和行间距会比其他页面的要小一些。但是并没有将样式全部重新写，我们嵌套着使用&符号创建了父层的选择器，让Sass补全整个选择器。这样我们就再一次的节省了我们的时间，并且让有关联的规则都放在了同一个组里。
+在store页面（或者其他带有&lt;body class="store"&gt;的页面），段落的文字和行间距会比其他页面的要小一些。但是并没有将样式全部重新写，我们嵌套着使用&符号创建了父层的选择器，让Sass补全整个选择器。这样我们就再一次的节省了我们的时间，并且让有关联的规则都放在了同一个组里。
 
 ###Sass中的注释
 
