修改第三章图片命名错误

--- a/_posts/translate/2014-03-13-c4.md
+++ b/_posts/translate/2014-03-13-c4.md
@@ -6,4 +6,41 @@ description: 本章应该会讨论如何使用Sass来设计响应式网站
 tags: translate
 ---
 
+<div class="source">
+	摘录来自: Dan Cederholm. “Sass for Web Designers”。
+</div>
+
+<div class="tips">
+此翻译仅为个人理解，如有翻译错误的地方还请指正。
+</div>
+
+在这本书中，我想要把主要精力都集中在讲解Sass的基础使用，和证明Sass并不会和你的工作流程脱节。但在最后一章中，我想讨论一些使用Sass结合媒体查询的高级技术和一些我每天工作中用到的将复杂CSS简化的例子。
+
+只要你能想到的，Sass就可以办到。使用变量和一些mixin会让你的生活变得更轻松。如果你想的话，Sass完全不局限于这些简单的功能。下面这个例子再一次举重若轻的展示了Sass的建立兼容高清屏幕的响应式网站。
+
+###嵌套媒体查询
+建立响应式网站的方法中，有一种就是使用CSS媒体查询。利用“监听”浏览器可视范围变化的尺寸，然后请求基于这个尺寸的样式来区别不同设备，灵活布局。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
