第三章代码对齐

--- a/_posts/translate/2014-03-13-c4.md
+++ b/_posts/translate/2014-03-13-c4.md
@@ -21,8 +21,20 @@ tags: translate
 ###嵌套媒体查询
 建立响应式网站的方法中，有一种就是使用CSS媒体查询。利用“监听”浏览器可视范围变化的尺寸，然后请求基于这个尺寸的样式来区别不同设备，灵活布局。
 
+例如，你可能想要浏览器包含的元素适应小于800px的宽，使用媒体查询就可以了：
 
-
+	section.main {
+		float: left;
+		width: 65%;
+		font-size: 16px;
+		line-height: 1.4;
+	}
+	@media screen and (max-width: 800px) {
+		section.main {
+			float: none;
+			width: auto;
+		}
+	}
 
 
 
