--- a/_posts/blog/2014-05-12-ybg.md
+++ b/_posts/blog/2014-05-12-ybg.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: [前端新技术] yeoman,bower,grunt
-description: 还没学会，只看了yeoman，grunt官网上说yeoman在几个月后会完全替代grunt-init
+title: 【前端新技术】 yeoman,bower,grunt
+description: 还没学会，只看了yeoman，grunt官网上说yeoman在几个月后会替代grunt-init
 category: blog
 ---
 
