some example page

--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -116,9 +116,11 @@ alert(typeof(window)) 会得 object
 	start_dj();
 
 
+###具体例子###
 
+**移动端模拟fixed**
 
-
+<a href="../../website/datum/移动端模拟fixed/html/红包记录.html">移动端模拟fixed的例子</a>
 
 
 
