--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -57,6 +57,12 @@ instanceof 用于判断一个变量是否某个对象的实例，如
 alert(typeof(window)) 会得 object
 
 
+###写法上的一些注意事项###
+
+	window.onscroll = test(); //仅IE有效
+	window.onscroll = test;   //IE和chrome等都有效
+
+
 ###前端面试题###
 
 1.&lt;a href="zciwp.github.io" id="link"&gt;zciwp.github.io&lt;/a&gt;点击只改变背景色和文字颜色，而不进行跳转
@@ -121,6 +127,10 @@ alert(typeof(window)) 会得 object
 **移动端模拟fixed**
 
 <a href="../../website/datum/移动端模拟fixed/html/红包记录.html">移动端模拟fixed的例子</a>
+
+手机端可以扫描二维码
+
+<img src="../../images/fixed.png" />
 
 
 
