--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -130,7 +130,7 @@ alert(typeof(window)) 会得 object
 
 手机端可以扫描二维码
 
-<img src="../../images/fixed.png" />
+<img src="../../images/QR/fixed.png" />
 
 
 
