add new js example

--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -133,6 +133,10 @@ alert(typeof(window)) 会得 object
 <img src="../../images/QR/fixed.png" />
 
 
+**登录页背景图随浏览器大小缩放全屏展示**
+
+<a href="../../website/pzw/html/登录.html">登录页背景图随浏览器大小缩放全屏展示</a>
+
 
 
 
