--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -81,21 +81,20 @@ alert(typeof(window)) 会得 object
 	}
 
 	//阻止默认事件
-	function stopDefault(){
+	function stopDefault(e){
 		if ( e && e.preventDefault ){
-			e.preventDefault();
+			e.preventDefault(); //ff等现代浏览器下
 		}
 		else{
-			window.event.returnvalue = false;
+			window.event.returnValue = false;//IE下用
 		}
 		return false;
 	}
 
 	function test(e){
-		var link = document.getElementById(id);
 		link.style.background = "black";
 		link.style.color = "white";
-		return false;
+		stopDefault(e);
 	}
 
 	EventUtil.getEvent("link","click",test);
