--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -99,6 +99,80 @@ alert(typeof(window)) 会得 object
 
 	EventUtil.getEvent("link","click",test);
 
+根据上面的题，顺便说一下stopPropagation。 stopPropagation的作用是阻止冒泡，我们都知道事件是一层一层向上冒泡的，即最终会传递到body上。如果我们在子元素上绑定了一个click事件，在父元素及body元素上也都有click事件，那么点击子元素将会触发父元素及body上的click事件。
+
+举个例子说明一下。
+	
+	<!doctype html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>test</title>
+	</head>
+	<body>
+		<div class="parent-box" id="parent">
+			<div class="child-box" id="child"></div>
+		</div>
+		<script>
+			function parent(){
+				console.log("parent");
+			}
+			function child(){
+				console.log("child");
+			}
+
+			var parent = document.getElementById("parent");
+			var child = document.getElementById("child");
+			
+			parent.onclick = parent;
+			child.onclick = child;
+
+		</script>
+	</body>
+	</html>
+
+上面这个例子是没有阻止事件冒泡的写法，那么点击child，在console中会显示child和parent。
+
+	<!doctype html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>test</title>
+	</head>
+	<body>
+		<div class="parent-box" id="parent">
+			<div class="child-box" id="child"></div>
+		</div>
+		<script>
+			function stopPropagation(e){
+				if(window.event){
+					event.cancelBubble = true;
+				}
+				else{
+					e.stopPropagation();
+				}
+			}
+
+			function parent(){
+				console.log("parent");
+			}
+			function child(e){
+				console.log("child");
+				stopPropagation();
+			}
+
+			var parent = document.getElementById("parent");
+			var child = document.getElementById("child");
+			
+			parent.onclick = parent;
+			child.onclick = child;
+
+		</script>
+	</body>
+	</html>
+
+经过修改，再点击child时，console中只会显示child。
+
 
 2.&lt;div id="num"&gt;30&lt;/div&gt;每秒div中的数字减少1，一直到0为止。
 
