update scss ppt

--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -212,4 +212,13 @@ alert(typeof(window)) 会得 object
 
 
 
+### 响应式用到的一些jquery插件
+
+1.兼容ie8以下（包括ie8）支持响应式[respond.js](https://github.com/scottjehl/Respond)
+
+2.瀑布流布局[isotope.js](isotope.metafizzy.co)，还支持筛选排序功能
+
+
+
+
 
