--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -219,6 +219,10 @@ alert(typeof(window)) 会得 object
 2.瀑布流布局[isotope.js](isotope.metafizzy.co)，还支持筛选排序功能
 
 
+### 基于jquery的翻页插件jpages
+
+[http://luis-almeida.github.io/jPages/](http://luis-almeida.github.io/jPages/) 只不过不支持ie6，略遗憾
+
 
 
 
