--- a/_posts/blog/2014-10-31-example.md
+++ b/_posts/blog/2014-10-31-example.md
@@ -8,4 +8,6 @@ category: blog
 
 1. github的404页面效果，类似于视差滚动，github开源了他写的js [示例](../../website/parallax/index.html)
 
-2. 瀑布流布局，并能支持筛选和排序功能
+2. 瀑布流布局，并能支持筛选和排序功能 [示例](../../website/isotope/index.html)
+
+3. 移动端广告布局 [示例](../../website/mobile-ad/html/mobile-ad.html)
