--- a/_posts/blog/2014-10-31-example.md
+++ b/_posts/blog/2014-10-31-example.md
@@ -11,3 +11,10 @@ category: blog
 2. 瀑布流布局，并能支持筛选和排序功能 [示例](../../website/isotope/index.html)
 
 3. 移动端广告布局 [示例](../../website/mobile-ad/html/mobile-ad.html)
+
+4. 做的搜狗的移动端广告 [示例](../../website/sg-h5-swiper/pages/page.html) 
+	
+也可用手机扫描下面的二维码
+
+![sg-h5图片](../../images/QR/sg-h5.png)
+
