--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -62,6 +62,28 @@ alert(typeof(window)) 会得 object
 	window.onscroll = test(); //仅IE有效
 	window.onscroll = test;   //IE和chrome等都有效
 
+**in操作符**
+
+“string” in obj||array
+
+in操作符左侧操作数必须是字符串类型或可以转换为字符串类型的其他类型，右侧操作数必须是对象或者数组。只有左侧的值是右侧操作数的属性名，才返回true。**即当右侧是对象时，左侧操作数是右侧的属性名，当右侧是数组时，左侧的值相当于数组角标（索引）。**
+
+例子：
+
+	var box = {box_width: 200,box_height: 300};
+	var arr = ["arr_length",200,"300"];
+
+	var x = "box_height";
+	var y = 2;
+
+	if(x in box){
+		console.log("变量x包含在对象box中");
+		console.log(box[x]);
+	}
+	else{
+		console.log("变量x包含在对象box中");
+	}
+
 
 ###前端面试题###
 
