add epubit website

--- a/_posts/blog/2014-08-13-js.md
+++ b/_posts/blog/2014-08-13-js.md
@@ -83,6 +83,13 @@ in操作符左侧操作数必须是字符串类型或可以转换为字符串类
 	else{
 		console.log("变量x包含在对象box中");
 	}
+	if(y in arr){
+		console.log("变量y包含在数组arr中");
+		console.log(arr[y]);
+	}
+	else{
+		console.log("变量y不包含在数组arr中");
+	}
 
 
 ###前端面试题###
